<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/layout_bg">

    <Button
        android:id="@+id/play_btn"
        android:layout_width="240dp"
        android:layout_height="64dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/play_button"
        android:onClick="onButtonClicked"
        android:text="@string/play_btn"
        android:textColor="@color/colorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/settings_btn"
        android:layout_width="240dp"
        android:layout_height="64dp"
        android:layout_marginTop="32dp"
        android:text="@string/settings_btn"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/play_btn"
        android:background="@drawable/settings_button" />

    <Button
        android:id="@+id/about_btn"
        android:layout_width="240dp"
        android:layout_height="64dp"
        android:layout_marginTop="32dp"
        android:text="@string/about_btn"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_btn"
        android:background="@drawable/about_button" />

    <Button
        android:id="@+id/leaderboard_btn"
        android:layout_width="240dp"
        android:layout_height="64dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/about_button"
        android:text="@string/leaderboard_btn"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_btn" />

    <TextView
        android:id="@+id/textView"
        android:background="#80000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="54sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>