<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_bg"
    android:paddingVertical="20dp"
    android:paddingHorizontal="25dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/leaderboard_title"
        android:layout_gravity="center"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:layout_marginBottom="15dp" />

    <TextView
        android:id="@+id/leaderboard_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/raleway"
        android:text="@string/leaderboard_empty"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <ListView
        android:id="@+id/leaderboard_list"
        android:layout_width="wrap_content"
        android:layout_height="356dp"
        android:layout_marginBottom="25dp"></ListView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/leaderboard_online_title"
        android:layout_gravity="center"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:layout_marginBottom="15dp" />

    <TextView
        android:id="@+id/leaderboard_online_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway"
        android:text="@string/leaderboard_empty"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:layout_marginBottom="15dp" />

    <ListView
        android:id="@+id/leaderboard_online_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></ListView>

</LinearLayout>